# rez-pip

./: CMakeLists.txt  README.md  build.sh  install.sh  package.py
21.3.1/: CMakeLists.txt  build.sh  package.py
24.3.1/: install.sh
